[package]
name = "rust-emu"
version = "0.1.0"
authors = ["Kevin Nguyen <ngynkvn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"


[dependencies]
sdl2 = "0.34.5"
log = "0.4.14"
crossterm = "0.20.0"
arraydeque = "0.4.5"
spin_sleep = "1.0.0"
imgui = "0.7.0"
imgui-opengl-renderer = "0.11.0"
gl = "0.14.0"
rustyline = "8.2.0"
glium = "0.30.1"
glium-glue = { path = "../glium-glue" }
color-eyre = "0.5.11"
clap = "3.0.0-beta.2"
nalgebra-glm = "0.15.0"
num-traits = "0.2.14"
imgui-glium-renderer = "0.7.0"
walkdir = "2.3.2"


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "emu"
harness = false

[profile.dev]
opt-level = 3
incremental = true

[profile.release]
debug = true
